--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+.container{
+  width: 500px;
+  height: 400px;
+  background-color: yellow;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  margin-top: 6%;
+  margin-left: 29%;
+}
+.field{
+  margin: 20px;
+  align-content: center;
+}
+h1{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.field input[type='text']{
+  width: 200px;
+  height: 25px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button{
+  width: 80px;
+  height: 30px;
+  margin-left: 200px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul{
+  list-style-type: none;
+  border: 2px solid whitesmoke;
+  background-color: whitesmoke;
+  width: 100%;
+  height: 70px;
 }
-
-.App-link {
-  color: #61dafb;
+li{
+  margin-top: 15px;
+  display: inline-block;
+  margin-right: 20px;
+  border: 2px solid black;
+  padding: 5px 15px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input{
+  margin-left: 10px;
 }
